# gymathon-rust

./: .env  .gitignore  Cargo.toml  README.md
src/: database.rs  errors.rs  main.rs  model.rs  routes.rs  schema.rs
src/api/: handlers.rs  models.rs
src/config/: settings.rs
src/db/: conn.rs
static/: booking-confirmation.html  index.html  script.js  style.css
