[package]
name = "gymathon-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "chrono"] }
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }




