[package]
name = "gymathon-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
warp = "0.3"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sqlx = {version = "0.6.0", features = ["postgres","runtime-tokio-rustls","chrono","macros"]}
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }









